--- a/index.html
+++ b/index.html
@@ -378,13 +378,13 @@
 
         <div class="row gallery">
             <div class="col-md-4">
-                <img src="รูปของแทร่/ของหวาน/3.คาเฟ่/474388341_916328213822087_4032154509489356976_n.jpg" />
+                <img src="3.คาเฟ่/474388341_916328213822087_4032154509489356976_n.jpg" />
             </div>
             <div class="col-md-4">
-                <img src="รูปของแทร่/ของหวาน/3.คาเฟ่/606449277_1161580129296893_9123578515541066805_n.jpg" />
+                <img src="3.คาเฟ่/606449277_1161580129296893_9123578515541066805_n.jpg" />
             </div>
             <div class="col-md-4">
-                <img src="รูปของแทร่/ของหวาน/3.คาเฟ่/529593779_1051794153608825_347268547749672921_n.jpg" />
+                <img src="3.คาเฟ่/529593779_1051794153608825_347268547749672921_n.jpg" />
             </div>
         </div>
         ----------------------------------------------------
@@ -584,3 +584,4 @@
 </body>
 
 </html>
+
